TPM2: add test script
- Add test script
- manage result to send it lava

Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/ledge/tpm2-test.yaml
+++ b/ledge/tpm2-test.yaml
@@ -6,6 +6,6 @@ metadata:
 
 run:
     steps:
-        - git clone https://github.com/tpm2-software/tpm2-tools -b 3.1.2
-        - cd ./tpm2-tools/test/system
-        - ./test.sh -p
+        - git clone https://github.com/tpm2-software/tpm2-tools -b 3.X
+        - git checkout -b thud 3.1.2
+        - ./ledge/tpm2-test.sh
