--- a/definitions/template-tpm2.yaml
+++ b/definitions/template-tpm2.yaml
@@ -38,11 +38,12 @@ actions:
 
 - test:
     timeout:
-        minutes: 10
+        minutes: 35
     definitions:
-        - repository: https://github.com/cpriouzeau/lava-test-definitions.git
+        - repository: https://git.linaro.org/ledge/lava-test-definitions.git
           from: git
           path: ledge/tpm2-test.yaml
+          name: TPMv2-testsuite
 
 metadata:
   machine: ${MACHINE}
