TPM2: correct force of version
The git checkout was made on wrong directory.

Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/ledge/tpm2-test.yaml
+++ b/ledge/tpm2-test.yaml
@@ -7,5 +7,5 @@ metadata:
 run:
     steps:
         - git clone https://github.com/tpm2-software/tpm2-tools -b 3.X
-        - git checkout -b thud 5e2f1aafc58e60c5050f85147a14914561f28ad9
+        - cd tpm2-tools; git checkout -b thud 5e2f1aafc58e60c5050f85147a14914561f28ad9; cd ..
         - ./ledge/tpm2-test.sh
