add ubuntu install
Signed-off-by: Maxim Uvarov <maxim.uvarov@linaro.org>

--- a/execs/ubuntu-build-essential.yaml
+++ b/execs/ubuntu-build-essential.yaml
@@ -42,3 +42,6 @@ install:
         - tcpdump
         - wget
         - qemu-system-arm
+        - ninja-build
+        - libglib2.0-dev
+        - libpixman-1-dev
